--- a/GradoCOPIA/Login/index.html
+++ b/GradoCOPIA/Login/index.html
@@ -16,5 +16,6 @@
     </form>
     <p>¿No tienes cuenta? <a href="../Sign_in/index.html">Regístrate aquí</a></p>
   </div>
-</body>
+  </body>
+    <script type="module" src="../supabaseClient.js"></script>
 </html>
