--- a/GradoCOPIA/Dashboard_admin/index.html
+++ b/GradoCOPIA/Dashboard_admin/index.html
@@ -37,6 +37,7 @@
   <!-- Contenedor de notificaciones -->
   <div id="notificaciones"></div>
 
+  <script type="module" src="../supabaseClient.js"></script>
   <script src="scriptAdm.js"></script>
 </body>
 </html>
