--- a/GradoCOPIA/Dashboard_comite/index.html
+++ b/GradoCOPIA/Dashboard_comite/index.html
@@ -38,6 +38,7 @@
 <div id="notificaciones"></div>
 
 
+  <script type="module" src="../supabaseClient.js"></script>
   <script src="scriptCom.js"></script>
 </body>
 </html>
